--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -215,13 +215,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "#filepath = \n",
-    "#pd.read_csv(filepath)"
+    "#listing_df = pd.read_csv(filepath)\n",
+    "#listing_df.columns\n",
+    "#listing_df.dtypes\n",
+    "#listing_df.shape\n",
+    "#listing_df.isnull().sum()\n",
+    "#columns_to_drop = ['id', 'host_name']\n",
+    "#listing_df.drop(columns_to_drop, axis='columns', inplace=False)\n",
+    "#listing_df.fillna({'reviews_per_month' : 0}, inplace=True)\n",
+    "#listing_df.dropna()\n",
+    "#listing_df['name'] # bracket notation\n",
+    "#listing_df[['name', 'price']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listing_df[listing_df['price'] < 100].shape # boolean indexing"
    ]
   }
  ],
