--- a/Monday.ipynb
+++ b/Monday.ipynb
@@ -407,7 +407,18 @@
    "source": [
     "# plot listings on map\n",
     "listing_df.head(3)\n",
-    "# affordable_df.plot()\n"
+    "# affordable_df.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from PIL import Image\n",
+    "# url = "
    ]
   }
  ],
