--- a/Monday/Notes.ipynb
+++ b/Monday/Notes.ipynb
@@ -420,6 +420,18 @@
     "from PIL import Image\n",
     "# url = "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kaggle datasets\n",
+    "dl data\n",
+    "JupyterLab\n",
+    "get CSV\n",
+    "import Pandas\n",
+    "read_csv function"
+   ]
   }
  ],
  "metadata": {
